--- a/scripts/golangci.yml
+++ b/scripts/golangci.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/golangci-lint
 lintroller:
-  tier: "platinum"
+  tier: "bronze"
 
 severity:
   default-severity: error
