--- a/service.yaml
+++ b/service.yaml
@@ -11,7 +11,7 @@ releaseType: ""
 deployTo:
   environments: []
 arguments:
-  circleAPIKey: ""
+  circleAPIKey: f28170e343fd8526a5d3e6cd427ebc93bbeb2803
   commands: []
   commitGuard: false
   dependencies:
