--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,11 @@
 version: 2
 updates:
+  # Golang dependencies
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
       interval: "daily"
-    # Bootstrap managed dependencies
+    # stencil-golang managed dependencies
     ignore:
       - dependency-name: github.com/getoutreach/gobox
       - dependency-name: github.com/getoutreach/mint
@@ -20,5 +21,6 @@ updates:
     ignore:
       - dependency-name: "*"
 
-  ###Block(dependabotPackageManagers)
-  ###EndBlock(dependabotPackageManagers)
+  ## <<Stencil::Block(dependabotPackageManagers)>>
+
+  ## <</Stencil::Block>>
