--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 # syntax, such as anchors, will be fixed automatically.
 version: 2.1
 orbs:
-  shared: getoutreach/shared@dev:first
+  shared: getoutreach/shared@2.4.0
 
 # Extra contexts to expose to all jobs below
 contexts: &contexts
@@ -14,9 +14,9 @@ contexts: &contexts
   - opslevel-credentials
   - vault-dev
   - confluence
-  ###Block(extraContexts)
+  ## <<Stencil::Block(extraContexts)>>
 
-  ###EndBlock(extraContexts)
+  ## <</Stencil::Block>>
 
 # Branches used for releasing code, pre-release or not
 release_branches: &release_branches
@@ -24,39 +24,39 @@ release_branches: &release_branches
 
 jobs:
   {}
-  ###Block(circleJobs)
+  ## <<Stencil::Block(circleJobs)>>
 
-  ###EndBlock(circleJobs)
+  ## <</Stencil::Block>>
 
   ### Start jobs inserted by other modules
   ### End jobs inserted by other modules
 
 workflows:
   version: 2
-  ###Block(circleWorkflows)
+  ## <<Stencil::Block(circleWorkflows)>>
 
-  ###EndBlock(circleWorkflows)
+  ## <</Stencil::Block>>
 
   ### Start workflows inserted by other modules
   ### End workflows inserted by other modules
 
   release:
     jobs:
-      ###Block(circleWorkflowJobs)
+      ## <<Stencil::Block(circleWorkflowJobs)>>
 
-      ###EndBlock(circleWorkflowJobs)
+      ## <</Stencil::Block>>
       ### Start jobs inserted by other modules
       ### End jobs inserted by other modules
       - shared/release: &release
           dryrun: false
           context: *contexts
-          ###Block(circleReleaseExtra)
+          ## <<Stencil::Block(circleReleaseExtra)>>
 
-          ###EndBlock(circleReleaseExtra)
+          ## <</Stencil::Block>>
           requires:
-            ###Block(circleReleaseRequires)
+            ## <<Stencil::Block(circleReleaseRequires)>>
 
-            ###EndBlock(circleReleaseRequires)
+            ## <</Stencil::Block>>
             - shared/test
           filters:
             branches:
@@ -74,9 +74,9 @@ workflows:
           app_name: csv
           ### Start parameters inserted by other modules
           ### End parameters inserted by other modules
-          ###Block(circleTestExtra)
+          ## <<Stencil::Block(circleTestExtra)>>
 
-          ###EndBlock(circleTestExtra)
+          ## <</Stencil::Block>>
 
       - shared/publish_docs:
           context: *contexts
@@ -92,9 +92,9 @@ workflows:
             - shared/test
       - shared/e2e:
           context: *contexts
-          ###Block(circleE2EExtra)
+          ## <<Stencil::Block(circleE2EExtra)>>
 
-          ###EndBlock(circleE2EExtra)
+          ## <</Stencil::Block>>
       - shared/docker:
           context: *contexts
           filters:
