--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/about-codeowners/
-* @getoutreach/cad-cdt
+* @getoutreach/fnd-qss
 
 ## <<Stencil::Block(customCodeowners)>>
 
