chore: change team

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,6 +3,6 @@
 
 ## <<Stencil::Block(customCodeowners)>>
 
-- @getoutreach/ce-records-management-services
+- @getoutreach/ce-rms
 
 ## <</Stencil::Block>>
