--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,19 @@
 # syntax, such as anchors, will be fixed automatically.
 version: 2.1
 orbs:
-  shared: getoutreach/shared@2.4.0
+  shared: getoutreach/shared@2.29.4
+  queue: eddiewebb/queue@2.2.1
+  ## <<Stencil::Block(CircleCIExtraOrbs)>>
+
+  ## <</Stencil::Block>>
+
+parameters:
+  rebuild_cache:
+    type: boolean
+    default: false
+  ## <<Stencil::Block(CircleCIExtraParams)>>
+
+  ## <</Stencil::Block>>
 
 # Extra contexts to expose to all jobs below
 contexts: &contexts
@@ -10,17 +22,33 @@ contexts: &contexts
   - ghaccesstoken
   - docker-registry
   - npm-credentials
-  - prismacloud-credentials
-  - opslevel-credentials
+  - box
   - vault-dev
   - confluence
+  - circleci-credentials
+  - tray-webhooks
+  - wizcli
   ## <<Stencil::Block(extraContexts)>>
+
+  ## <</Stencil::Block>>
+
+# Test configs to pass to test and cache jobs
+test: &test
+  context: *contexts
+  app_name: csv
+  ### Start parameters inserted by other modules
+  ### End parameters inserted by other modules
+  ## <<Stencil::Block(circleTestExtra)>>
 
   ## <</Stencil::Block>>
 
 # Branches used for releasing code, pre-release or not
 release_branches: &release_branches
   - "main"
+
+## <<Stencil::Block(circleAnchorExtra)>>
+
+## <</Stencil::Block>>
 
 jobs:
   {}
@@ -40,7 +68,27 @@ workflows:
   ### Start workflows inserted by other modules
   ### End workflows inserted by other modules
 
+  rebuild-cache:
+    triggers:
+      - schedule:
+          # Every day at 00:00 UTC.
+          cron: "0 0 * * *"
+          filters:
+            branches:
+              only:
+                - main
+    jobs:
+      - shared/save_cache: *test
+
+  manual-rebuild-cache:
+    when: << pipeline.parameters.rebuild_cache >>
+    jobs:
+      - shared/save_cache: *test
+
   release:
+    when:
+      and:
+        - not: << pipeline.parameters.rebuild_cache >>
     jobs:
       ## <<Stencil::Block(circleWorkflowJobs)>>
 
@@ -60,42 +108,58 @@ workflows:
             - shared/test
           filters:
             branches:
-              only: *release_branches
-
-      # Dryrun release for PRs.
-      - shared/release:
-          <<: *release
+              only: main
+      # Dryrun for PRs
+      - shared/pre-release: &pre-release
           dryrun: true
+          context: *contexts
+          ## <<Stencil::Block(circlePreReleaseDryRunExtra)>>
+
+          ## <</Stencil::Block>>
+          requires:
+            ## <<Stencil::Block(circlePreReleaseDryRunRequires)>>
+
+            ## <</Stencil::Block>>
+            - shared/test
           filters:
             branches:
               ignore: *release_branches
       - shared/test:
-          context: *contexts
-          app_name: csv
-          ### Start parameters inserted by other modules
-          ### End parameters inserted by other modules
-          ## <<Stencil::Block(circleTestExtra)>>
+          <<: *test
+          ## <<Stencil::Block(circleSharedTestExtra)>>
 
           ## <</Stencil::Block>>
-
       - shared/publish_docs:
           context: *contexts
           filters:
             branches:
-              ignore: /.*/
+              only:
+                - main
             tags:
-              only: /v[0-9]+(\.[0-9]+)*(-.*)*/
-      - shared/finalize-coverage:
-          context: *contexts
-          requires:
-            - shared/e2e
-            - shared/test
+              only: /v\d+(\.\d+)*(-.*)*/
       - shared/e2e:
           context: *contexts
           ## <<Stencil::Block(circleE2EExtra)>>
 
           ## <</Stencil::Block>>
-      - shared/docker:
+      - shared/docker_stitch:
+          context: *contexts
+          requires:
+            - shared/docker_amd64
+            - shared/docker_arm64
+          filters:
+            branches:
+              ignore: *release_branches
+            tags:
+              only: /v\d+(\.\d+)*(-.*)*/
+      - shared/docker_amd64:
+          context: *contexts
+          filters:
+            branches:
+              ignore: *release_branches
+            tags:
+              only: /v\d+(\.\d+)*(-.*)*/
+      - shared/docker_arm64:
           context: *contexts
           filters:
             branches:
