--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ TAGS
 *.sublime-project
 *.sublime-workspace
 .\#*
+.dir-locals.el
 
 # Test binary, build with "go test -c"
 *.test
@@ -59,6 +60,12 @@ Pulumi.*.yaml
 
 # Documentation output
 /apidocs
+
+# Terraform lock files
+.terraform.lock.hcl
+
+### Start ignores inserted by other modules
+### End ignores inserted by other modules
 
 ## <<Stencil::Block(extras)>>
 
