--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,13 +4,13 @@
     "esbenp.prettier-vscode",
     "hashicorp.terraform",
     "golang.go",
-    "heptio.jsonnet",
-    "xrc-inc.jsonnet-formatter",
+    "Grafana.vscode-jsonnet",
     "timonwong.shellcheck",
     "zxh404.vscode-proto3",
     "redhat.vscode-yaml",
     "ms-azuretools.vscode-docker",
-    "foxundermoon.shell-format"
+    "foxundermoon.shell-format",
+    "WizCloud.wizcli-vscode"
 
     // Please consider contributing back all recommended
     // extensions to stencil!
