--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,16 @@
   "go.useLanguageServer": true,
   "go.testEnvFile": "${workspaceFolder}/.vscode/private.env",
   "go.alternateTools": {
-    // This makes sure we use the correct version
-    // of golangci-lint in our editors.
-    "golangci-lint": "${workspaceFolder}/.bootstrap/shell/golangci-lint.sh"
+    "golangci-lint": "${workspaceFolder}/.bootstrap/shell/vscode/golang-linters.sh"
   },
+  // This is disabled because it causes version mismatches between the
+  // tools used/installed by asdf / stencil, and the ones updated by VSCode.
+  // In particular, this is a problem with newer versions of golangci-lint
+  // incompatible with older versions of Go.
+  "go.toolsManagement.autoUpdate": false,
   "go.buildTags": "or_dev",
   "go.testTags": "or_test,or_int,or_e2e",
+  "files.trimTrailingWhitespace": true,
   // This prevents 99% of issues with linters :)
   "editor.formatOnSave": true,
   "shellcheck.customArgs": ["-P", "SCRIPTDIR", "-x"],
