--- a/scripts/golangci.yml
+++ b/scripts/golangci.yml
@@ -2,41 +2,50 @@
 lintroller:
   tier: "platinum"
 
-severity:
-  default-severity: error
-  case-sensitive: false
-  rules:
-    - severity: warning
-      # New rule, add as warning for now
-      text: "^(redundantSprint|ioutilDeprecated|octalLiteral):"
-      linters:
-        - gocritic
-    - severity: warning
-      # New rule, add as warning for now
-      linters:
-        - errorlint
-
 # Linter settings
 linters-settings:
   errcheck:
     check-blank: true
   govet:
-    check-shadowing: true
+    enable:
+      - shadow
   revive:
-    confidence: 0
+    rules:
+      # Enable the default golint rules. We must include these because
+      # we configure a single rule, which disables the default rules.
+      - name: blank-imports
+      - name: context-as-argument
+      - name: context-keys-type
+      - name: dot-imports
+      - name: error-return
+      - name: error-strings
+      - name: error-naming
+      - name: exported
+      - name: increment-decrement
+      - name: var-naming
+      - name: var-declaration
+      - name: package-comments
+      - name: range
+      - name: receiver-naming
+      - name: time-naming
+      - name: unexported-return
+      - name: indent-error-flow
+      - name: errorf
+      - name: empty-block
+      - name: superfluous-else
+      - name: unreachable-code
+      - name: redefines-builtin-id
+      # While we agree with this rule, right now it would break too many
+      # projects. So, we disable it by default.
+      - name: unused-parameter
+        disabled: true
   gocyclo:
     min-complexity: 25
-  maligned:
-    suggest-new: true
   dupl:
     threshold: 100
   goconst:
     min-len: 3
     min-occurrences: 3
-  depguard:
-    list-type: blacklist
-  misspell:
-    locale: US
   lll:
     line-length: 140
   gocritic:
@@ -57,13 +66,11 @@ linters:
   disable-all: true
   enable:
     - bodyclose
-    - deadcode
-    - depguard
+    - copyloopvar # Detects places where loop variables are copied.
     - dogsled
     - errcheck
     - errorlint
     - exhaustive # Checks exhaustiveness of enum switch statements.
-    - exportloopref # Checks for pointers to enclosing loop variables.
     - funlen
     - gochecknoinits
     - goconst
@@ -80,15 +87,14 @@ linters:
     # - misspell        # The reason we're disabling this right now is because it uses 1/2 of the memory of the run.
     - nakedret
     - staticcheck
-    - structcheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
     - whitespace
 
 issues:
+  max-same-issues: 10
   exclude:
     # We allow error shadowing
     - 'declaration of "err" shadows declaration at'
@@ -100,10 +106,10 @@ issues:
       linters:
         - gocyclo
         - errcheck
-        - dupl
         - gosec
         - funlen
         - gochecknoglobals # Globals in test files are tolerated.
+        - goconst # Repeated consts in test files are tolerated.
     # This rule is buggy and breaks on our `///Block` lines.  Disable for now.
     - linters:
         - gocritic
@@ -113,8 +119,13 @@ issues:
       text: "SA5011"
       linters:
         - staticcheck
+    - linters:
+        - lll
+      source: "^//go:generate "
 
 output:
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
+      path: stdout
   sort-results: true
   print-severity: true
